--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
+        <div class="header">
         <h1>Minimo</h1>
         <nav>
             <a href="#">LIFESTYLE</a>
             <a href="#">PHOTODIARY</a>
             <a href="#">MUSIC</a>
             <a href="#">TRAVEL</a>
-        </nav>
+        </nav></div>
+        <img src="./img/image.png" alt="">
     </header>
 </body>
 </html>
