--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <div class="header">
-        <h1>Minimo</h1>
-        <nav>
-            <a href="#">LIFESTYLE</a>
-            <a href="#">PHOTODIARY</a>
-            <a href="#">MUSIC</a>
-            <a href="#">TRAVEL</a>
-        </nav></div>
+            <h1>Minimo</h1>
+            <nav>
+                <a href="#">LIFESTYLE</a>
+                <a href="#">PHOTODIARY</a>
+                <a href="#">MUSIC</a>
+                <a href="#">TRAVEL</a>
+            </nav>
+        </div>
         <img src="./img/image.png" alt="">
     </header>
+    <main>
+        <div class="container1">
+            <p style="color: gray;">PHOTODIARY</p>
+            <h1>The perfect weekend getaway</h1>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus tempora id eos facere
+                laudantium incidunt quia quo! Deleniti veniam dignissimos dolores, autem obcaecati ipsam id aut alias
+                animi enim omnis? Ut consequatur, eius quos atque ipsam commodi soluta explicabo neque totam, quisquam
+                id fugiat porro repudiandae sequi asperiores cum dicta voluptates accusamus consequuntur natus
+                praesentium beatae perferendis odio? Tenetur, dolor quas! Similique asperiores assumenda suscipit fugit
+                quae fuga officiis vitae aliquid natus, sint animi est explicabo, mollitia quas, deserunt voluptate.
+                Exercitationem, a. Expedita amet repudiandae dolorum cumque suscipit, recusandae praesentium quo
+                consequatur voluptates impedit eius quos! Recusandae unde vero dolor sit, aperiam dolores quibusdam in
+                autem et itaque, magnam eos sapiente qui sint inventore error non ipsam cupiditate animi ab vitae
+                voluptate velit praesentium explicabo. Tempore laboriosam ad fugiat similique, cumque consequatur
+                corrupti maxime dolor, quod doloribus totam nam in animi laborum. Adipisci blanditiis accusamus cumque
+                placeat ipsa, asperiores odit vero ullam laudantium quasi, consequuntur eveniet neque? Reprehenderit
+                corrupti aspernatur officiis, voluptatem similique nisi minima reiciendis harum blanditiis illum
+                quibusdam totam repellat alias omnis? Mollitia voluptatibus expedita quaerat pariatur ab tempore
+                exercitationem repellendus iste. Error minus adipisci eum enim natus? Facere odio ex repudiandae. Sequi
+                id officia rem dolor.</h4>
+            <h3>LEAVE A COMMENT</h3>
+        </div>
+    </main>
 </body>
+
 </html>
