--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="./img/image.png" alt="">
     </header>
     <main>
-        <div class="container1">
+        <div class="container">
             <p style="color: gray;">PHOTODIARY</p>
             <h1>The perfect weekend getaway</h1>
             <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus tempora id eos facere
@@ -42,6 +42,40 @@
                 exercitationem repellendus iste. Error minus adipisci eum enim natus? Facere odio ex repudiandae. Sequi
                 id officia rem dolor.</h4>
             <h3>LEAVE A COMMENT</h3>
+        </div>
+        <div class="gallery">
+            <div class="container1">
+                <div class="img1">
+                    <img src="./img/1row/leftpost1row.png" alt="">
+                    <h5>LIFESTYLE</h5>
+                    <h1>More than just a music festival</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae consequuntur voluptates ducimus
+                        distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
+                </div>
+                <div class="img2">
+                    <img src="./img/1row/rightpost1row.png" alt="">
+                    <h5>LIFESTYLE</h5>
+                    <h1>Life tastes better with coffee</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae consequuntur voluptates ducimus
+                        distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
+                </div>
+            </div>
+            <div class="container1">
+                <div class="img1">
+                    <img src="./img/2row/leftpost2row.png" alt="">
+                    <h5>LIFESTYLE</h5>
+                    <h1>American dream</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae consequuntur voluptates ducimus
+                        distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
+                </div>
+                <div class="img2">
+                    <img src="./img/2row/rightpost2row.png" alt="">
+                    <h5>LIFESTYLE</h5>
+                    <h1>A day exploring the Alps</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae consequuntur voluptates ducimus
+                        distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
