--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                 </div>
             </div>
         </div>
+        <div class="email">
+            <form action="">
+                <label for="email"><h1>Sign up for our newsletter!</h1></label>
+                <input type="email" name="email" id="email" placeholder="Enter a valid email address">
+                <a href="#"><img src="./img/send.png" alt=""></a>
+            </form>
+        </div>
     </main>
 </body>
 
