added new photo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="./img/image.png" alt="">
     </header>
     <main>
-        <div class="container">
+        <div class="container1">
             <p style="color: gray;">PHOTODIARY</p>
             <h1>The perfect weekend getaway</h1>
             <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus tempora id eos facere
@@ -44,7 +44,7 @@
             <h3>LEAVE A COMMENT</h3>
         </div>
         <div class="gallery">
-            <div class="container1">
+            <div class="container2">
                 <div class="img1">
                     <img src="./img/1row/leftpost1row.png" alt="">
                     <h5>LIFESTYLE</h5>
@@ -60,7 +60,7 @@
                         distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
                 </div>
             </div>
-            <div class="container1">
+            <div class="container2">
                 <div class="img1">
                     <img src="./img/2row/leftpost2row.png" alt="">
                     <h5>LIFESTYLE</h5>
@@ -84,6 +84,23 @@
                 <a href="#"><img src="./img/send.png" alt=""></a>
             </form>
         </div>
+        <div class="container2">
+            <div class="img1">
+                <img src="./img/3row/leftpost3row.png" alt="">
+                <h5>LIFESTYLE</h5>
+                <h1>Top 10 song for running</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae consequuntur voluptates ducimus
+                    distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
+            </div>
+            <div class="img2">
+                <img src="./img/3row/rightpost3row.png" alt="">
+                <h5>LIFESTYLE</h5>
+                <h1>Cold winter days</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae consequuntur voluptates ducimus
+                    distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
+            </div>
+        </div>
+        <button><a href="#">Load more</a></button>
     </main>
 </body>
 
