--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         </div>
         <div class="email">
             <form action="">
-                <label for="email"><h1>Sign up for our newsletter!</h1></label>
+                <label for="email">
+                    <h1>Sign up for our newsletter!</h1>
+                </label>
                 <input type="email" name="email" id="email" placeholder="Enter a valid email address">
                 <a href="#"><img src="./img/send.png" alt=""></a>
             </form>
@@ -100,7 +102,7 @@
                     distinctio numquam eum delectus deserunt iusto voluptatibus! Veritatis.</p>
             </div>
         </div>
-        <button><a href="#">Load more</a></button>
+        <div class="button"><a href="#">Load more</a></div>
     </main>
 </body>
 
