--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         </div>
         <div class="button"><a href="#">Load more</a></div>
     </main>
+    <footer>
+        <h5>t</h5>
+    </footer>
 </body>
 
 </html>
