--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
         <div class="button"><a href="#">Load more</a></div>
     </main>
     <footer>
-        <h5>t</h5>
+        <h3>Terms and conditions Privacy</h3>
+        <div class="container">
+            <h3>Follow</h3>
+            <a href="#"><img src="./img/icon/facebook.png" alt=""></a>
+            <a href="#"><img src="./img/icon/twitter.png" alt=""></a>
+            <a href="#"><img src="./img/icon/instagram.png" alt=""></a>
+        </div>
     </footer>
 </body>
 
